--- a/index.html
+++ b/index.html
@@ -77,13 +77,62 @@
 
   <header class="container-fluid" >
       <div class="row">
-          <div class="big-img">
-            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          <div class="col-12">
+            <div class="big-img">
+                <img class="img-fluid" src="./img/jumbo-bg.png" alt="">
+              </div>
           </div>
       </div>
-
-
   </header>
+
+  <!--SECTION-->
+
+  <section class="container overflow-hidden mt-4">
+      <div class="row sec-1 gy-4">
+          <div class="col-6 col-sm-4 col-lg-2">
+              <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+              <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+      </div>
+  </section>
+
+  <!--sec 2-->
+
+  <section class="container mt-5">
+      <div class="row sec-2">
+          <div class="col-12 ">
+              <div class="text-primary">PLAY HAS NO LIMITS</div>
+              <h1>Ecco la Play Station 5</h1>
+              <p class="text-secondary" >Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+          </div>
+      </div>
+  </section>
+
+  <!--sec 3-->
+
+  <section class="container mt-5">
+    <div class="row">
+        <div class="col-12 ">
+            <h1>Console Play Station 5</h1>
+            <p class="text-secondary" >Sperimenta la nuova generazionedi incredibili giochi Play Station</p>
+            <button type="button" class="btn btn-primary bt">Maggiori informazioni</button>
+        </div>
+    </div>
+</section>
         
    
 
