--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 </ul>
                 <form class="d-flex">
                     <a class="nav-link active" aria-current="page" href="#"><span class="text-dark">My PlayStation</span></a>
-                    <button class="btn btn-outline-success bt" type="submit">Accedi</button>
-                    <a  href="#"><img class="logo-1" src ="./img/lens.svg" alt=""></a>
+                    <button type="button" class="btn btn-dark bt">Accedi</button>
+                    <a  href="#"><i class="fab fa-sistrix logo-1"></i></a>
                 </form>
               </div>
             </div>
@@ -76,10 +76,10 @@
   <!--HEADER-->
 
   <header class="container-fluid" >
-      <div class="row">
-          <div class="col-12">
-            <div class="big-img">
-                <img class="img-fluid" src="./img/jumbo-bg.png" alt="">
+      <div class="row ">
+          <div class="col-12  ">
+            <div class="big-img" >
+                
               </div>
           </div>
       </div>
