--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <!--jumbo 2-->
 
-  <header class="container-fluid" >
+  <header class="container-fluid mt-5" >
     <div class="row big-img jumbo-2">
       <div class="col-lg-2"></div>
 
@@ -205,61 +205,98 @@
 <!--section 5-->
 
 <section class="container sec-5 gy-4">
-  <div class="row text-white">
-    <h3>Nuove uscite</h3>
+  <div class="row text-white lh-lg">
+    <h3 class="mt-4" >Nuove uscite</h3>
     <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2 ">
       <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
       <span>Tony-Hawks &trade; Pro Skater &trade; 1+2</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
       <span>Crash Bandicoot 4 : It's About Time</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
       <span>Tony-Hawks &trade; Pro Skater &trade; 1+2</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
       <span>Crash Bandicoot 4 : It's About Time</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
       <span>Tony-Hawks &trade; Pro Skater &trade; 1+2</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
       <span>Crash Bandicoot 4 : It's About Time</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
       <span>Tony-Hawks &trade; Pro Skater &trade; 1+2</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
       <span>Crash Bandicoot 4 : It's About Time</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
       <span>Tony-Hawks &trade; Pro Skater &trade; 1+2</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
       <span>Crash Bandicoot 4 : It's About Time</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
       <span>Tony-Hawks &trade; Pro Skater &trade; 1+2</span>
     </div>
-    <div class="col-6">
+    <div class="mb-5 col-6 col-sm-4 col-lg-2">
       <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
       <span>Crash Bandicoot 4 : It's About Time</span>
-    </div>
-
-
-  
+    </div>  
   </div>
+</section>
+
+<!--section 6-->
+
+<section class="container mt-5">
+  <div class="row sec-2">
+      <div class="col-12 ">
+          <h1>Esplora la PlayStation <span class="fs-6" >&reg;</span>4</h1>
+          <p class="text-secondary mt-5 mb-5">Giochi incredibili e intrattenimento senza fine. <br> Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
+      </div>
+   </div>
+
+   <div class="row">
+     <div class="col-12 col-md-4">
+       <div>
+       <img class="pic" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
+       </div>
+       <h1>PlayStation 4</h1>
+          <p class="text-secondary">Giochi incredibili live su PS4,con un TB di spazio di archiviazione.</p>
+          <button class="btn btn-primary bt" type="submit">Scopri di più</button>
+     </div>
+
+     <div class="col-12 col-md-4">
+      <div>
+      <img class="pic" src="./img/double11-202010-tw-psvr.jpg" alt="">
+      </div>
+      <h1>PlayStation VR</h1>
+         <p class="text-secondary">Oltre 500 titoli ed esperienze di gioco.Scoprili tutti.</p>
+         <button class="btn btn-primary bt" type="submit">Scopri di più</button>
+    </div>
+
+    <div class="col-12 col-md-4">
+      <div>
+      <img class="pic" src="./img/dualshock-4-listing-thumb.jpg" alt="">
+      </div>
+      <h1>Accessori</h1>
+         <p class="text-secondary">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+         <button class="btn btn-primary bt" type="submit">Scopri di più</button>
+    </div>
+   </div>
 </section>
 
 
