--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <!--jumbo 2-->
 
-  <header class="container-fluid mt-5" >
+  <div class="container-fluid mt-5" >
     <div class="row big-img jumbo-2">
       <div class="col-lg-2"></div>
 
@@ -200,9 +200,9 @@
       <div class="col-lg-4"></div>
       <div class="col-lg-2"></div>
     </div>
-</header>
+  </div>
 
-<!--section 5-->
+  <!--section 5-->
 
 <section class="container sec-5 gy-4">
   <div class="row text-white lh-lg">
@@ -298,6 +298,28 @@
     </div>
    </div>
 </section>
+  
+  <!--jumbo 3-->
+
+  <div class="container-fluid mt-5" >
+    <div class="row big-img jumbo-3">
+      <div class="col-lg-2"></div>
+
+      <div class="col-12 col-lg-4 ">
+        <div class=" align-content-end">
+        <div>
+          <img class="logo-3" src="./img/ps-plus-logo.png" alt="">
+        </div>
+        <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online,giochi mensili,sconti esclusivi ad altro ancora  .</p>
+        <button type="button" class="btn btn-outline-primary bt bt-w">Esplora PlayStation Plus</button>
+        </div>
+      </div>
+      <div class="col-lg-4"></div>
+      <div class="col-lg-2"></div>
+    </div>
+  </div>
+
+
 
 
         
