--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!--HEADER-->
 
   <header class="container-fluid" >
-      <div class="row jumbo-1 big-img ">
+      <div class="row jumbo-1 big-img align-items-end ">
         <div class="col-lg-2"></div>
 
         <div class="col-12 col-lg-4 ">
@@ -184,11 +184,11 @@
   <!--jumbo 2-->
 
   <div class="container-fluid mt-5" >
-    <div class="row big-img jumbo-2">
+    <div class="row big-img jumbo-2 align-items-end">
       <div class="col-lg-2"></div>
 
       <div class="col-12 col-lg-4 ">
-        <div class=" align-content-end">
+        <div>
         <div>
           <img class="logo-3" src="./img/it-takes-two-logo.png" alt="">
         </div>
@@ -302,22 +302,69 @@
   <!--jumbo 3-->
 
   <div class="container-fluid mt-5" >
-    <div class="row big-img jumbo-3">
-      <div class="col-lg-2"></div>
-
+    <div class="row jumbo-3 align-items-center">
+      <div class="col-lg-2">  
+      </div>
       <div class="col-12 col-lg-4 ">
-        <div class=" align-content-end">
+        
         <div>
           <img class="logo-3" src="./img/ps-plus-logo.png" alt="">
         </div>
-        <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online,giochi mensili,sconti esclusivi ad altro ancora  .</p>
-        <button type="button" class="btn btn-outline-primary bt bt-w">Esplora PlayStation Plus</button>
+        <p class="mt-4 mb-4" >Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online,giochi mensili,sconti esclusivi ad altro ancora  .</p>
+        <button type="button" class="btn btn-outline-primary bt bt-w">Esplora PlayStation Plus</button>  
+      </div>
+      <div class="col-lg-4  d-none d-sm-block d-sm-none d-md-block">
+         <img class="pic-3" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--<div class="container-fluid mt-5" >
+    <div class="row big-img jumbo-3 align-items-center">
+      <div class="col-lg-2"></div>
+
+      <div class="col-12 col-lg-4 ">
+        <div>
+        <div>
+          <img class="logo-3" src="./img/ps-plus-logo.png" alt="">
+        </div>
+        <p class="mt-5 mb-5" >Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online,giochi mensili,sconti esclusivi ad altro ancora  .</p>
+        <button type="button" class="btn btn-outline-primary bt bt-w">Esplora PlayStation Plus</button>  
         </div>
       </div>
       <div class="col-lg-4"></div>
       <div class="col-lg-2"></div>
     </div>
-  </div>
+  </div>-->
+
+
+
+
+ 
+       
+
+ 
 
 
 
