--- a/index.html
+++ b/index.html
@@ -321,6 +321,38 @@
   </div>
 
 
+  <!--section 7-->
+
+  <section class="container mt-5 overflow-hidden">
+    <div class="row sec-2">
+        <div class="col-12 ">
+            <h1>Nuovi sconti su PLayStation Store</h1>
+            <p class="text-secondary mt-5 mb-5">Sconti pazzeschi,collezioni curate e saldi stagionali su PS5,PS4 e PS VR,tutti in un unico posto.</p>
+        </div>
+     </div>
+     <div class="row">
+       <div class="col-12 col-md-4">
+         <div class="gy-4">
+           <img class="pic" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
+         </div>
+       </div>
+       <div class="col-12 col-md-4">
+         <div class="gy-4">
+           <img class="pic" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+         </div>
+       </div>
+       <div class="col-12 col-md-4">
+         <div class="gy-4">
+           <img class="pic" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
+         </div>
+       </div>
+      </div>
+
+   </div>
+   </section>
+  
+
+
 
 
 
