--- a/index.html
+++ b/index.html
@@ -332,24 +332,46 @@
      </div>
      <div class="row">
        <div class="col-12 col-md-4">
-         <div class="gy-4">
+         <div class="mb-4 gy-4">
            <img class="pic" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
          </div>
        </div>
        <div class="col-12 col-md-4">
-         <div class="gy-4">
+         <div class="mb-4 gy-4">
            <img class="pic" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
          </div>
        </div>
        <div class="col-12 col-md-4">
-         <div class="gy-4">
+         <div class="mb-4 gy-4">
            <img class="pic" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
          </div>
        </div>
       </div>
-
    </div>
    </section>
+
+   <!--jumbo 4-->
+
+   <div class="container-fluid mt-5" >
+    <div class="row jumbo-4 align-items-center">
+      <div class="col-lg-2">  
+      </div>
+      <div class="col-12 col-lg-4 ">
+        
+        <div>
+          <img class="logo-3" src="./img/ps-now-logo-two-column.png" alt="">
+        </div>
+        <p class="text-white mt-4 mb-4" >Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online,giochi mensili,sconti esclusivi ad altro ancora  .</p>
+        <button type="button" class="btn btn-light bt">Esplora PlayStation Now</button>
+      </div>
+      <div class="col-lg-4  d-none d-sm-block d-sm-none d-md-block">
+         <img class="pic-3" src="./img/ps-now-april-featured-image-block.png" alt="">
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+  </div>
+
+
   
 
 
