--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
  <section class="container-fluid sec-5 pic gy-4">
 
 
-
+ <div class="album"> 
   <div class="row text-white lh-lg">
     <h3 class="mt-4" >Nuove uscite</h3>
     <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
@@ -266,6 +266,7 @@
     </div>
     </div> 
     </div> 
+  </div>  
   </div>
 
  </section>
@@ -384,7 +385,7 @@
 
    <!--section 8-->
 
-  <div class="container mb-5">
+  <div class="container social mb-5">
      <div class="text-center mb-5 mt-5"><h4>Seguici sui social media</h4></div>
         <div class="row" >
          <div class="col-6 col-sm-3 mb-4">
