hover bottoni returnal

--- a/index.html
+++ b/index.html
@@ -103,22 +103,22 @@
   <section class="container overflow-hidden mt-4 album">
       <div class="row pic gy-4">
           <div class="col-6 col-sm-4 col-lg-2">
-              <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+              <img class="ghost-2 m" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 ">
+              <img class="ghost-2 m" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
           <div class="col-6 col-sm-4 col-lg-2">
-              <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+            <img class="ghost-2 m" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
           <div class="col-6 col-sm-4 col-lg-2">
-            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            <img class="ghost-2 m" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
           <div class="col-6 col-sm-4 col-lg-2">
-            <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+            <img class="ghost-2 m" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
           </div>
           <div class="col-6 col-sm-4 col-lg-2">
-            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
-          </div>
-          <div class="col-6 col-sm-4 col-lg-2">
-            <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+            <img class="ghost-2 m" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
       </div>
   </section>
@@ -406,7 +406,7 @@
 
    <footer class="container-fluid " >
      <div class="album">
-     <div class="row pd-l">
+     <div class="row ">
        <div class="col-12 ">
         <div>
           <img class="logo-4" src="./img/ps-footer.svg" alt="">
