--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </ul>
                 <form class="d-flex">
                     <a class="nav-link active" aria-current="page" href="#"><span class="text-dark">My PlayStation</span></a>
-                    <button type="button" class="btn btn-dark bt">Accedi</button>
+                    <button type="button" class="btn btn-dark bt ghost-1">Accedi</button>
                     <a href="#"><img class="logo-1 ms-2 mt-2" src="./img/lens.svg " alt=""></a>
                 </form>
               </div>
@@ -88,7 +88,7 @@
              </div>
                <h1 class="text-white mb-3 mt-3" >Rompi il cerchio</h1>
                <p class="text-white" >Rialzati dopo ogni sconfitta e affronta ogni nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico,disponibile in esclusiva su PS5.</p>
-               <button type="button" class="btn btn-danger bt">Acquista ora</button>
+               <button type="button" class="btn btn-danger bt ghost-4">Acquista ora</button>
             </div>
         </div>
         <div class="col-lg-4">
@@ -145,7 +145,7 @@
           <div class="col-12 col-md-6 col-lg-4">
             <h1>Console Play Station 5</h1>
             <p class="text-secondary" >Sperimenta la nuova generazionedi incredibili giochi Play Station</p>
-            <button type="button" class="btn btn-primary bt">Maggiori informazioni</button>
+            <button type="button" class="btn btn-primary bt ghost-2">Maggiori informazioni</button>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <img class="img-fluid" src="./img/playstation-5-thumb.png" alt="">
@@ -198,7 +198,7 @@
           </div>
            <h1 class="text-white mb-4 mt-4" >Un'avventura cooperativa selvaggia ti attende</h1>
            <p class="text-white" >Trova un amico e parti insieme per l'avventurapiù folle delle vostre vite in It Takes Two,un gioco di avventura cooperativa e piattaforme che stravolge il suo genere</p>
-           <button type="button" class="btn btn-danger bt mb-5">Acquista ora</button>
+           <button type="button" class="btn btn-danger bt mb-5 ghost-4">Acquista ora</button>
         </div>
         <div class="col-lg-4">
         </div>
@@ -287,7 +287,7 @@
         </div>
           <h1>PlayStation 4</h1>
           <p class="text-secondary">Giochi incredibili live su PS4,con un TB di spazio di archiviazione.</p>
-          <button class="btn btn-primary bt" type="submit">Scopri di più</button>
+          <button class="btn btn-primary bt ghost-2" type="submit">Scopri di più</button>
     </div>
 
     <div class="col-12 col-md-4">
@@ -296,7 +296,7 @@
         </div>
           <h1>PlayStation VR</h1>
           <p class="text-secondary">Oltre 500 titoli ed esperienze di gioco.Scoprili tutti.</p>
-         <button class="btn btn-primary bt" type="submit">Scopri di più</button>
+         <button class="btn btn-primary bt ghost-2" type="submit">Scopri di più</button>
     </div>
 
    <div class="col-12 col-md-4">
@@ -305,7 +305,7 @@
         </div>
           <h1>Accessori</h1>
           <p class="text-secondary">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
-         <button class="btn btn-primary bt" type="submit">Scopri di più</button>
+         <button class="btn btn-primary bt ghost-2" type="submit">Scopri di più</button>
    </div>
   </div>
   </section>
@@ -372,7 +372,7 @@
             <img class="logo-3" src="./img/ps-now-logo-two-column.png" alt="">
         </div>
             <p class="text-white mt-4 mb-4" >Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online,giochi mensili,sconti esclusivi ad altro ancora  </p>
-            <button type="button" class="btn btn-light bt">Esplora PlayStation Now</button>
+            <button type="button" class="btn btn-light bt ghost-3">Esplora PlayStation Now</button>
         </div>
         <div class="col-lg-4  d-none d-sm-block d-sm-none d-md-block">
             <img class="pic-3" src="./img/ps-now-april-featured-image-block.png" alt="">
