--- a/index.html
+++ b/index.html
@@ -388,16 +388,16 @@
      <div class="text-center mb-5 mt-5"><h4>Seguici sui social media</h4></div>
         <div class="row" >
          <div class="col-6 col-sm-3 mb-4">
-             <img class="pic" src="./img/twitter.jpg" alt="">
+             <img class="pic sha" src="./img/twitter.jpg" alt="">
          </div>
          <div class="col-6 col-sm-3 mb-4">
-             <img class="pic" src="./img/facebook.jpg" alt="">
+             <img class="pic sha" src="./img/facebook.jpg" alt="">
          </div>
          <div class="col-6 col-sm-3 mb-4">
-             <img class="pic" src="./img/instagram.jpg" alt="">
-         </div>
+             <img class="pic sha" src="./img/instagram.jpg" alt="">
+         </div >
          <div class="col-6 col-sm-3 mb-4">
-             <img class="pic" src="./img/youtube.png" alt="">
+             <img class="pic sha" src="./img/youtube.png" alt="">
          </div>
      </div>
   </div>
