--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!--sec 2-->
 
-  <section class="container mt-5">
+  <section class="container  mt-5">
       <div class="row sec-2">
           <div class="col-12">
               <div class="text-primary">PLAY HAS NO LIMITS</div>
@@ -142,7 +142,7 @@
        <div class="row d-flex align-items-center">
           <div class="col-lg-2">
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
+          <div class="col-12 col-md-6 col-lg-4 ">
             <h1>Console Play Station 5</h1>
             <p class="text-secondary" >Sperimenta la nuova generazionedi incredibili giochi Play Station</p>
             <button type="button" class="btn btn-primary bt ghost-2">Maggiori informazioni</button>
@@ -159,7 +159,7 @@
   <!--sec 4-->
 
   <section class="container">
-      <div class="row pic gy-3">
+      <div class="row pic gy-3 ">
           <div class="col-md-1"></div>
           <div class="ghost text-center col-4 col-md-2 ">
               <img src="./img/playstation-5-thumb.png" alt="">
@@ -407,7 +407,7 @@
    <footer class="container-fluid " >
      <div class="album">
      <div class="row ">
-       <div class="col-12 ">
+       <div class="col-12 pl">
         <div>
           <img class="logo-4" src="./img/ps-footer.svg" alt="">
          </div>
@@ -507,7 +507,7 @@
       </div>
     </div> 
 
-    <div class="row pd-l">
+    <div class="row pl">
       <div class="col-12">
         <img class="logo-4" src="./img/sie-logo.svg" alt="">
           
